xfsprogs-2.7.18 (16 May 2006)
	- Fixed a case where xfs_repair was reporting a valid used 
	  block as a duplicate during phase 4.
	- Fixed a case where xfs_repair could incorrectly flag extent
	  b+tree nodes as corrupt.
	- Portability changes, get xfs_repair compiling on IRIX.
	- Parent pointer updates in xfs_io checker command.
	- Allow LDFLAGS to be overridden, for Gentoo punters.

xfsprogs-2.7.17 (05 April 2006)
	- Fix libxfs access(2) check on /proc/mounts, which was
	  causing issues when xfs_check/xfs_repair run on readonly
	  root filesystem mounts.
	- Fix Debian packaging for libc-dev build dependency.
	- Fix up auto lib64 install detection for x86_64 platforms.

xfsprogs-2.7.16 (22 March 2006)
	- Fix freespace accounting in xfs_quota(8) df command.
	- Fix a typo on the xfs_quota(8) man page.
	- Make -O2 (cc optimisation level) the default.

xfsprogs-2.7.15 (03 March 2006)
	- Fix the way external log/realtime devices were handled in
	  userspace with older kernels (subtely different in procfs)
	- Fix a corruption problem in xfs_copy(8) when attempting to
	  zero the (old) log, a section was sometimes missed (depends
	  on log and I/O buffer (mis)alignment).

xfsprogs-2.7.14 (15 February 2006)
	- Debian packaging updates (debmake out, debhelper in).
	- Fix a header to work with additional compiler variants.

xfsprogs-2.7.13 (08 February 2006)
	- Convert fsck into a shell script and make it provide a
	  hint to run repair/check (in non-auto fsck modes).
	  Thanks to Marian Jancar <mjancar@suse.cz> for this.
	- Fix compilation botch on non-Linux platforms (duplicate
	  type definitions).

xfsprogs-2.7.12 (31 January 2006)
	- Added initial Polish translation.
	  Thanks to Jakub Bogusz <qboosh@pld-linux.org> for this.
	- Fixed rpm specfile with respect to INSTALL_{USER,GROUP}.

xfsprogs-2.7.11 (16 January 2006)
	- Fix a problem with the generated source tarballs and a
	  missing parent.h header file.

xfsprogs-2.7.10 (16 December 2005)