@@ -32,6 +32,10 @@ already have this enabled.
 Specifies that the filesystem image to be processed is stored in a
 regular file (see the \f2mkfs.xfs\f1 \f3\-d\f1 \f2file\f1 option).
 .TP 5
+\f3\-j\f1
+Enables version 2 log format (journal format supporting larger
+log buffers).
+.TP 5
 \f3\-l\f1
 Print the current filesystem label.
 .TP 5
